--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 }
 
 jar {
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest {
         attributes 'Main-Class': 'net.example.HelloWorld'
     }
