--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,14 @@
 apply plugin: 'java'
+apply plugin: 'org.owasp.dependencycheck'
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.owasp:dependency-check-gradle:1.4.0'
+    }
+}
 
 repositories {
     mavenCentral()
